# AIMS_course_Pandas_vs_Polars

./: Pandas_vs_Polars.ipynb  README.md  pyproject.toml
